# warkod

./: .gitignore  CMakeLists.txt  readme
docs/: generate-macros  macros.tex  main.tex  makefile
src/: CMakeLists.txt  dilation_filter.cpp  dilation_filter.hpp  erosion_filter.cpp  erosion_filter.hpp  filter.hpp  image.cpp  image.hpp  main.cpp  median_filter.cpp  median_filter.hpp  parameters.hpp  pixel.cpp  pixel.hpp
tests/: calculate  compile  test
tests/gnuplot/: massplot  output1  output2  plot  selected1  selected2
